--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,6 +50,6 @@ table {
 /* end reset style */
 
 @media (prefers-color-scheme: dark) {
-  	background-color: #000000
+  background-color: #000000;
 	color: #FFFFFF
 }
