--- a/style.css
+++ b/style.css
@@ -46,3 +46,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* end of reset style */
+:root {
+  --background-color: #fffff;
+  --text-color: #00000;
+}
