--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
+   modified slightly by me, moon
 */
 
 html, body, div, span, applet, object, iframe,
@@ -16,9 +17,9 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: 20;
+	padding: 20;
+	border: 20;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
