--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
    modified slightly by me, moon
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+html, body, div, span, applet, object, iframe, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -18,12 +17,78 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 20;
-	padding: 20;
+	padding: 30;
 	border: 20;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
+
+h1 {
+	margin: 20;
+	padding: 30;
+	border: 20;
+	font: inherit;
+	vertical-align: baseline;
+	font-size: 32;
+	font-weight: 900;
+}
+h2 {
+	margin: 20;
+	padding: 30;
+	border: 20;
+	font: inherit;
+	vertical-align: baseline;
+	font-size: 24;
+	font-weight: 816.5;
+}
+h3 {
+	margin: 20;
+	padding: 30;
+	border: 20;
+	font: inherit;
+	vertical-align: baseline;
+	font-size: 19;
+	font-weight: 733.2;
+}
+h4 {
+	margin: 20;
+	padding: 30;
+	border: 20;
+	font: inherit;
+	vertical-align: baseline;
+	font-size: 16;
+	font-weight: 649.9;
+}
+h5 {
+	margin: 20;
+	padding: 30;
+	border: 20;
+	font: inherit;
+	vertical-align: baseline;
+	font-size: 14;
+	font-weight: 566.6;
+}
+h6 {
+	margin: 20;
+	padding: 30;
+	border: 20;
+	font: inherit;
+	vertical-align: baseline;
+	font-size: 13;
+	font-weight: 483.3;
+	
+}
+p {
+	margin: 20;
+	padding: 30;
+	border: 20;
+	font: inherit;
+	vertical-align: baseline;
+	font-size: 12;
+	font-weight: 400;
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -46,6 +111,10 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+html { 
+	font-weight: 400;
 }
 
 /* end of reset style */
