--- a/style.css
+++ b/style.css
@@ -4,7 +4,30 @@
    modified slightly by me, moon
 */
 
-html, body, div, span, applet, object, iframe, blockquote, pre,
+
+
+:root {
+  	--background-color: #fff;
+  	--text-color: #000;
+}
+
+[data-theme="dark"] {
+  --background-color: #3F3F3F;
+  --text-color: #fff;
+}
+
+body {
+  	background-color: var(--background-color);
+  	color: var(--text-color);
+  	margin: 20;
+	padding: 30;
+	border: 20;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+html, div, span, applet, object, iframe, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -117,8 +140,6 @@ html {
 	font-weight: 400;
 }
 
-/* end of reset style */
-:root {
-  --background-color: #fffff;
-  --text-color: #00000;
-}
+
+
+
