--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 [data-theme="dark"] {
   --background-color: #3F3F3F;
   --text-color: #fff;
+  --link-color: #58A6FF;
 }
 
 body {
@@ -25,6 +26,9 @@ body {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+}
+a { 
+	color: var(--link-color);
 }
 
 html, div, span, applet, object, iframe, blockquote, pre,
