--- a/style.css
+++ b/style.css
@@ -12,9 +12,8 @@
 }
 
 [data-theme="dark"] {
-  --background-color: #3F3F3F;
+  --background-color: #000000;
   --text-color: #fff;
-  --link-color: #58A6FF;
 }
 
 body {
@@ -26,9 +25,6 @@ body {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-}
-a { 
-	color: var(--link-color);
 }
 
 html, div, span, applet, object, iframe, blockquote, pre,
