--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
    modified slightly by me, moon
+   also credit to https://www.pullrequest.com/blog/how-to-implement-dark-mode-with-css-js/ for base dark mode code
 */
 
 
