--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   	margin: 20;
 	padding: 30;
 	border: 20;
-	font-size: 100%;
+	font-size: inherit;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -43,7 +43,7 @@ time, mark, audio, video {
 	margin: 20;
 	padding: 30;
 	border: 20;
-	font-size: 100%;
+	font-size: inherit;
 	font: inherit;
 	vertical-align: baseline;
 }
