--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 
 body {
-  	background-color: var(--background-color);
-  	color: var(--text-color);
+  	color: #222;
+  	background: #fff;
   	margin: 20;
 	padding: 30;
 	border: 20;
@@ -36,7 +36,7 @@ time, mark, audio, video {
 }
 
 a {
-	color: var(--link-color);
+	color: #0033cc;
 }
 
 h1 {
