--- a/dark-style.css
+++ b/dark-style.css
@@ -6,9 +6,9 @@
 
 
 body {
-  background-color: var(--background-color);
-  color: var(--text-color);
-  margin: 20;
+  	color: #eee;
+  	background: #121212;
+  	margin: 20;
 	padding: 30;
 	border: 20;
 	font-size: inherit;
@@ -36,7 +36,7 @@ time, mark, audio, video {
 }
 
 a {
-	color: var(--link-color);
+	color: #809fff;
 }
 
 h1 {
