--- a/style.css
+++ b/style.css
@@ -3,36 +3,75 @@
    License: none (public domain)
    modified slightly by me, moon
 */
-
 body {
-  	color: #222;
- 	background: #fff;
-  	background: #fff;
-  	margin: 20;
-	padding: 30;
-	border: 20;
-	font-size: inherit;
-	font: inherit;
-	vertical-align: baseline;
+    --text-color: #222;
+    --bkg-color: #fff;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font-size: inherit;
+    font: inherit;
+    vertical-align: baseline;
 }
 
-body.dark-theme {
-  	color: #eee;
-  	background: #121212;
-  	margin: 20;
-	padding: 30;
-	border: 20;
-	font-size: inherit;
-	font: inherit;
-	vertical-align: baseline;
-
 a {
-  color: #0033cc;
+    color: #0033cc;
+}
+
+/* Dark theme colors */
+body.dark-theme {
+    --text-color: #eee;
+    --bkg-color: #121212;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font-size: inherit;
+    font: inherit;
+    vertical-align: baseline;
 }
 
 body.dark-theme a {
-  color: #809fff;
+    color: #809fff;
 }
+
+@media (prefers-color-scheme: dark) {
+
+    /* defaults to dark theme */
+    body {
+        --text-color: #eee;
+        --bkg-color: #121212;
+        margin: 20;
+        padding: 30;
+        border: 20;
+        font-size: inherit;
+        font: inherit;
+        vertical-align: baseline;
+    }
+
+    a {
+        color: #0033cc;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    body.light-theme {
+        --text-color: #222;
+        --bkg-color: #fff;
+        margin: 20;
+        padding: 30;
+        border: 20;
+        font-size: inherit;
+        font: inherit;
+        vertical-align: baseline;
+    }
+
+    body.dark-theme a {
+        color: #809fff;
+    }
+}
+
+
+
 
 html, div, span, applet, object, iframe, blockquote, pre, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -41,115 +80,122 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 20;
-	padding: 30;
-	border: 20;
-	font-size: inherit;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font-size: inherit;
+    font: inherit;
+    vertical-align: baseline;
 }
 
 a {
-	color: #0033cc;
+    color: #0033cc;
 }
 
 h1 {
-	margin: 20;
-	padding: 30;
-	border: 20;
-	font: inherit;
-	vertical-align: baseline;
-	font-size: 32;
-	font-weight: 900;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font: inherit;
+    vertical-align: baseline;
+    font-size: 32;
+    font-weight: 900;
 }
+
 h2 {
-	margin: 20;
-	padding: 30;
-	border: 20;
-	font: inherit;
-	vertical-align: baseline;
-	font-size: 24;
-	font-weight: 816.5;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font: inherit;
+    vertical-align: baseline;
+    font-size: 24;
+    font-weight: 816.5;
 }
+
 h3 {
-	margin: 20;
-	padding: 30;
-	border: 20;
-	font: inherit;
-	vertical-align: baseline;
-	font-size: 19;
-	font-weight: 733.2;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font: inherit;
+    vertical-align: baseline;
+    font-size: 19;
+    font-weight: 733.2;
 }
+
 h4 {
-	margin: 20;
-	padding: 30;
-	border: 20;
-	font: inherit;
-	vertical-align: baseline;
-	font-size: 16;
-	font-weight: 649.9;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font: inherit;
+    vertical-align: baseline;
+    font-size: 16;
+    font-weight: 649.9;
 }
+
 h5 {
-	margin: 20;
-	padding: 30;
-	border: 20;
-	font: inherit;
-	vertical-align: baseline;
-	font-size: 14;
-	font-weight: 566.6;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font: inherit;
+    vertical-align: baseline;
+    font-size: 14;
+    font-weight: 566.6;
 }
+
 h6 {
-	margin: 0;
-	padding: 0;
-	border: 20;
-	font: inherit;
-	vertical-align: baseline;
-	font-size: 8;
-	font-weight: 200;
-	
+    margin: 0;
+    padding: 0;
+    border: 20;
+    font: inherit;
+    vertical-align: baseline;
+    font-size: 8;
+    font-weight: 200;
+
 }
+
 p {
-	margin: 20;
-	padding: 30;
-	border: 20;
-	font: inherit;
-	vertical-align: baseline;
-	font-size: 12;
-	font-weight: 400;
+    margin: 20;
+    padding: 30;
+    border: 20;
+    font: inherit;
+    vertical-align: baseline;
+    font-size: 12;
+    font-weight: 400;
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
-html { 
-	font-weight: 400;
+html {
+    font-weight: 400;
 }
-
-
-
-
