--- a/style.css
+++ b/style.css
@@ -14,43 +14,102 @@ body {
 
 
 @media (prefers-color-scheme: light) {
-   :root {
-     background: #FAF9F6;
-     color: #00000;
-   }
-   a {
-      color: #0000EE;
-   }
-     
+    :root {
+        background: #FAF9F6;
+        color: #00000;
+    }
+
+    a {
+        color: #0000EE;
+    }
+
 }
 
 @media (prefers-color-scheme: dark) {
-   :root {
-     background: #121212;
-     color: #FAF9F6;
-   }
-   a {
-      color: #6473E8;
-   }
-     
+    :root {
+        background: #121212;
+        color: #FAF9F6;
+    }
+
+    a {
+        color: #6473E8;
+    }
+
 }
-    
 
 
-
-
-
-html, div, span, applet, object, iframe, blockquote, pre, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+div,
+span,
+applet,
+object,
+iframe,
+blockquote,
+pre,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
     margin: 20;
     padding: 30;
     border: 20;
@@ -135,8 +194,17 @@ p {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
     display: block;
 }
 
@@ -144,16 +212,20 @@ body {
     line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
     list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
     quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
     content: '';
     content: none;
 }
