--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
    modified slightly by me, moon
 */
 body {
-    margin: 20;
-    padding: 30;
-    border: 20;
+    margin: 0;
+    padding: 0;
+    border: 0;
     font-size: inherit;
     font: inherit;
     vertical-align: baseline;
@@ -14,7 +14,7 @@ body {
 
 
 @media (prefers-color-scheme: light) {
-    :root {
+    body {
         background: #FAF9F6;
         color: #00000;
     }
@@ -26,7 +26,7 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
-    :root {
+    body {
         background: #121212;
         color: #FAF9F6;
     }
